--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "lodash.throttle": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-window": "^1.8.11",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
